RocketShip Changelog

02-13-2015

    - Added Mongo driver for Upload manager
    - Added Mongo file serving (for files uploaded using the upload manager)
    - Added support for Mongo upload files in Image class
    - Added distinct Filter class
    - Added new events
    - System events are now constants within the Event class
    - Bug fixes

01-03-2015

    - Added bundleimage in HTML helper
    - Fixed bug with database update statements where the key is the _id and is not an MongoId instance

01-02-2015

    - Added possibility of custom directives
    - Added support for directives in the generator
    - Documentation!!! First in 5 years
    - API documentation updated
    - Bug fixes

31-01-2015

    - Added view directives (<!--view-->, <!--include:partial_name-->, <!--inject:js-->, <!--inject:css-->)
    - Updated documentation